linked objects lose parents on saving or on loading #38471

Closed
opened 2014-02-04 00:53:44 +01:00 by drevilt · 10 comments

System Information
archlinux
nvidia gtx 275

Blender Version
Broken: 2.69 c7ac0ed

Short description of error
linked objects lose parents on saving or on loading.

Exact steps for others to reproduce the error

  • create a blender scene with at least one object called some_objects.blend
  • create another blender scene where you link in the object(s) ( not just the meshes ) from the previous file.
  • make a new empty object
  • parent the linked object(s) to the empty object.
  • ( you can now move around the linked object using the empty object, otherwise you couldnt )
  • save this file to linked.blend
  • reopen it and you see that the parent setting has been lost and with it any positioning of the objects.

the parent tree before:

before.png

and after loading/saving:

after.png

I dont think this behavior is intended. Maybe blender saves the file 'correctly' but just loads it incorrectly. I also have not included .blend files because i dont know how blender handles file names and maybe my local/absolute paths dont work if you open them . Anyway it should be easy to make those two .blend files

**System Information** archlinux nvidia gtx 275 **Blender Version** Broken: 2.69 c7ac0ed **Short description of error** linked objects lose parents on saving or on loading. **Exact steps for others to reproduce the error** - create a blender scene with at least one object called some_objects.blend - create another blender scene where you link in the object(s) ( not just the meshes ) from the previous file. - make a new empty object - parent the linked object(s) to the empty object. - ( you can now move around the linked object using the empty object, otherwise you couldnt ) - save this file to linked.blend - reopen it and you see that the parent setting has been lost and with it any positioning of the objects. the parent tree before: ![before.png](https://archive.blender.org/developer/F75899/before.png) and after loading/saving: ![after.png](https://archive.blender.org/developer/F75901/after.png) I dont think this behavior is intended. Maybe blender saves the file 'correctly' but just loads it incorrectly. I also have not included .blend files because i dont know how blender handles file names and maybe my local/absolute paths dont work if you open them . Anyway it should be easy to make those two .blend files
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @drevilt

Added subscriber: @drevilt

Added subscriber: @brecht

Added subscriber: @brecht

Confirmed, you shouldn't be allowed to give linked objects parents, that means you can edit linked object which is not supported and will be preserved through file saves.

Confirmed, you shouldn't be allowed to give linked objects parents, that means you can edit linked object which is not supported and will be preserved through file saves.

This issue was referenced by blender/blender-addons-contrib@8acf717b6d

This issue was referenced by blender/blender-addons-contrib@8acf717b6d14231e99c6755d8f88eec835a33126

This issue was referenced by 8acf717b6d

This issue was referenced by 8acf717b6d14231e99c6755d8f88eec835a33126

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8acf717b6d.

Closed by commit 8acf717b6d.
Author

i have tested your changes now and i cannot parent linked objects anymore. But is there any way now to move around linked objects?
I dont see why you should not be allowed to parent linked objects.

i have tested your changes now and i cannot parent linked objects anymore. But is there any way now to move around linked objects? I dont see why you should not be allowed to parent linked objects.

The way it works in Blender is that the parent is a property of the child object, if that child object is linked then none of its properties can't be edited. So unfortunately this is not possible in the current architecture.

The way it works in Blender is that the parent is a property of the child object, if that child object is linked then none of its properties can't be edited. So unfortunately this is not possible in the current architecture.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38471
No description provided.