Fix T38471: parenting in the outliner was possible with library linked objects.